--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,15 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: gainsboro;
+
+  /* ドラッグ禁止 */
+  user-select:none;
+  -webkit-user-select:none;
+  -ms-user-select: none;
+  -moz-user-select:none;
+  -khtml-user-select:none;
+  -webkit-user-drag:none;
+  -khtml-user-drag:none;
 }
 
 h1 {
