--- a/src/style.css
+++ b/src/style.css
@@ -29,7 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: gainsboro;
+  background: #ffffff;
 
   /* ドラッグ禁止 */
   user-select:none;
@@ -72,7 +72,7 @@ button:focus-visible {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
