--- a/src/style.css
+++ b/src/style.css
@@ -32,11 +32,11 @@ body {
   background: #ffffff;
 
   /* ドラッグ禁止 */
-  user-select:none;
+  /* user-select:none;
   -webkit-user-select:none;
   -ms-user-select: none;
   -moz-user-select:none;
-  -khtml-user-select:none;
+  -khtml-user-select:none; */
   -webkit-user-drag:none;
   -khtml-user-drag:none;
 }
